How many times will be the charm?